# LangGraph_Agentic_Framework

./: .gitignore  README.md  pyproject.toml
LangSmith/module_0/: rag_application.ipynb  utils.py
agentic_ai/lesson1_Pydantic/: pydantic_basics.ipynb
agentic_ai/lesson2_LangGraph Basics/: simplegraph.ipynb
agentic_ai/lesson3_Agentic AI Chatbot wt LangGraph/: chat_tools.ipynb
agentic_ai/lesson4_Langgraph & MCP/: client.py  math_client.py  mcp_langgraph.py  servers.py  weather_client.py  weather_stdio.py
deep_agents/: 0_create_agent.ipynb  langgraph.json  research_agent.py  test_agent.py
deep_agents/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
email_agent/: agent.ipynb  langgraph_101.ipynb
email_agent/studio/: langgraph.json  langgraph_101.py
email_agent/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langgraph_deployment/: docker-compose.yml  langgraph.json  requirements.txt
module-0/: basics.ipynb
module-0/.ipynb_checkpoints/: basics-checkpoint.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  router.ipynb  simple-graph.ipynb
module-1/.ipynb_checkpoints/: simple-graph-checkpoint.ipynb
module-1/studio/: agent.py  langgraph.json  router.py
module-1/studio/.langgraph_api/: .langgraph_ops.pckl  (+4 more)
module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-2/state_db/: example.db-shm  example.db-wal
module-2/studio/: chatbot.py  langgraph.json
module-3/: breakpoints.ipynb  edit-state-human-feedback.ipynb
module-3/studio/: agent.py  langgraph.json
(+10 files in other folders)
